# mercury-test-app

./: .gitignore  MANIFEST.in  README.md  package.json  pyproject.toml  setup.cfg  setup.py  test.ipynb  webpack.config.js
src/: index.ts
style/: base.css  index.css
test_app/: __init__.py
test_app/tests/: conftest.py
ui-tests/: package.json
