[build-system]
build-backend = "jupyter_packaging.build_api"
requires = ["jupyter_packaging~=0.12", "jupyterlab>=4,<5"]

[license]
file = "LICENSE"

[tool.jupyter-packaging.options]
ensured-targets = ["test_app/static/bundle.js"]
skip-if-exists = ["test_app/static/bundle.js"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = [
  "app/**",
  "binder/**",
  "buildutils/**",
  "packages/**",
  "*.json",
  "yarn.lock",
  "readthedocs.yml",
  ".bumpversion.cfg",
  ".*",
  "babel.config.js",
  "jest.config.js",
  "lint-staged.config.js",
  "conftest.py",
  "logo.*",
  "test_app/labextension/**",
  "test_app/schemas/**",
  "test_app/static/**",
  "test_app/template/**",
  "ui-tests/**",
]
