[metadata]
name = test_app
version = attr: test_app._version.__version__
description = A JupyterLab based standalone application
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = Piotr
author_email = 
url = https://github.com//test-app
platforms = Linux, Mac OS X, Windows
keywords = Jupyter, JupyterLab, Notebook
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Jupyter

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    jupyterlab>=4,<5
    jupyterlab_server>=2.19,<3
    jupyter_server>=2.4.0,<3
    nbclassic~=0.2
    tornado>=6.2.0

[options.extras_require]
test =
    pytest
    pytest-tornasync
    
[options.entry_points]
console_scripts =
    test-app = test_app:main
    jupyter-test-app = test_app:main
